surse/err20.txt
prob20.cpp:32:1: error: expected unqualified-id before ‘{’ token
 {
 ^